tests/errors/test_76.x
// Inappropriate tuple destructuring

fn main() -> void {

	let b, c, d = 21;


	let e, f = (1, 2, 3);


	let a, b: bool = (1, 2);

}
